# XOR

./: README.md  TEST1.dart  my-release-key.jks  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_lib.cpp
assets/: cube.mtl  light.mtl  meta.mtl
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: 3d_object.dart  admin.dart  hive.dart  home_page.dart  home_viewmodel.dart  location.dart  login.dart  main.dart  menu_item.dart  notifications.dart  reviews.dart  splash.dart  user.dart  user_admin_page.dart
lib/models/: boba_store.dart  bottom_bar.dart  notifications.dart  profile.dart  reviews.dart  user_admin_page.dart
lib/services/: QRCode.dart  chatbot.dart  hive.dart  location.dart  location_service.dart  order_service.dart  splash.dart  splash2.dart  theme.dart  theme_provider.dart
lib/widgets/: Greeting.dart  app_bar_content.dart  carousel_widget.dart  chatbot_popup.dart  circular_layout.dart  clickable_menu_item.dart  featured_item.dart  featured_item_card.dart  promo.dart  qr_code_dialog.dart  social_media.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
